Commiting stream-architecture framework in databricks platform

--- a/databricks_stream_architecture/SPA_Assignment_2_SparkStream.ipynb
+++ b/databricks_stream_architecture/SPA_Assignment_2_SparkStream.ipynb
@@ -17,7 +17,6 @@
    },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "True"
@@ -30,8 +29,8 @@
    ],
    "source": [
     "import urllib\n",
-    "access_key = \"AKIAWQ5CY4CSMGOGQX7D\"\n",
-    "secret_key = \"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\"\n",
+    "access_key = \"***\"\n",
+    "secret_key = \"***\"\n",
     "\n",
     "encoded_secret_key = urllib.parse.quote(secret_key, \"\")\n",
     "\n",
@@ -58,11 +57,16 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "total 24\ndrwxrwxrwx 2 nobody nogroup 4096 Sep 18 12:26 stream_write\ndrwxrwxrwx 2 nobody nogroup 4096 Sep 18 12:26 stream_read\ndrwxrwxrwx 2 nobody nogroup 4096 Sep 18 12:26 stream_checkpoint\ndrwxrwxrwx 2 nobody nogroup 4096 Sep 18 14:34 clustering_data\ndrwxrwxrwx 2 nobody nogroup 4096 Sep 18 14:35 pizza_customers_data\ndrwxrwxrwx 2 nobody nogroup 4096 Sep 18 18:00 location_data\n"
+      "total 24\n",
+      "drwxrwxrwx 2 nobody nogroup 4096 Sep 18 12:26 stream_write\n",
+      "drwxrwxrwx 2 nobody nogroup 4096 Sep 18 12:26 stream_read\n",
+      "drwxrwxrwx 2 nobody nogroup 4096 Sep 18 12:26 stream_checkpoint\n",
+      "drwxrwxrwx 2 nobody nogroup 4096 Sep 18 14:34 clustering_data\n",
+      "drwxrwxrwx 2 nobody nogroup 4096 Sep 18 14:35 pizza_customers_data\n",
+      "drwxrwxrwx 2 nobody nogroup 4096 Sep 18 18:00 location_data\n"
      ]
     }
    ],
@@ -114,7 +118,6 @@
    },
    "outputs": [
     {
-     "output_type": "display_data",
      "data": {
       "text/html": [
        "<style scoped>\n",
@@ -355,7 +358,7 @@
          2,
          "12.978389",
          "77.594336",
-         2.4357144E-4
+         0.00024357144
         ],
         [
          46,
@@ -1405,7 +1408,7 @@
          3,
          "12.978389",
          "77.594329",
-         5.5306545E-4
+         0.00055306545
         ],
         [
          81,
@@ -1656,8 +1659,25 @@
    },
    "notebookName": "SPA_Assignment_2_SparkStream",
    "widgets": {}
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
