--- a/databricks_stream_architecture/SPA_Assignment_2_Location_Simulation.ipynb
+++ b/databricks_stream_architecture/SPA_Assignment_2_Location_Simulation.ipynb
@@ -18,8 +18,8 @@
    "outputs": [],
    "source": [
     "# import urllib\n",
-    "# access_key = \"AKIAWQ5CY4CSMGOGQX7D\"\n",
-    "# secret_key = \"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\"\n",
+    "# access_key = \"***\"\n",
+    "# secret_key = \"***\"\n",
     "\n",
     "# encoded_secret_key = urllib.parse.quote(secret_key, \"\")\n",
     "\n",
@@ -46,7 +46,6 @@
    },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -353,8 +352,25 @@
    },
    "notebookName": "SPA_Assignment_2_Location_Simulation",
    "widgets": {}
+  },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
